# polymarket-agent

./: .env.example  .gitignore  CLAUDE.md  PROJECT.md  README.md  compass_artifact_wf-11eae62c-b91a-4b27-b0a5-55c7b32d5fa8_text_markdown.md  pm.md  pmwhy.md  pmwhybetter.md  polymarket.md  pyproject.toml  v2.md
polyagent/: config.py  dashboard.py  gamma.py  logging_setup.py  main.py  news_store.py  orderbook.py  paper_broker.py  queue_model.py  supervisor.py  tasks_extra.py  trade_hunter.py  ws_polymarket.py
scripts/: analyze_high_confidence_tail.py  backfill_certified_markets.py  backfill_failures.py  backfill_market_prices.py  backfill_polymarket_trades.py  backfill_resolutions.py  backtest_bocpd.py  backtest_kaminski_lo.py  backtest_negrisk_arb.py  bootstrap_3expert_combiner.py  bootstrap_outcomes.py  certify_maker_thesis.py  eval_decontaminated_features.py  eval_horizons.py  finetune_qwen3_outcome_rl.py  inspect_book_archive.py  recertify_sports_global_pbo_grid.py  reconcile_queue_aware.py  rematerialize_p_stat.py  train_combiner.py  train_combiner_per_category.py  train_lgbm.py  validate_strategy.py
tests/: test_agent_next_fees.py  test_arb_executor.py  test_asymmetric_brier.py  test_bayesian_sharpe.py  test_block_bootstrap.py  test_book_archive.py  test_broker_buy_cap.py  test_cancel_latency.py  test_certificate_gate.py  test_certify_maker_thesis.py  test_colbert_retriever.py  test_conformal_kelly.py  test_conformal_risk_control.py  test_consistency_loss.py  test_cscv.py  test_data_clients_readonly.py  test_failure_tracker.py  test_fees.py  test_foreign_news.py  (+36 more)
(+105 files in other folders)
