[project]
name = "polyagent"
version = "0.1.0"
description = "Polymarket paper-trading agent"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "aiosqlite>=0.19",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "feedparser>=6.0",
    "vaderSentiment>=3.3",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "joblib>=1.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["polyagent*"]
